--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1720,6 +1720,9 @@ h3 {
 .lessonCollectionSection table tbody tr td.duration-width{
 	font-size:13px;
 }
+.lessonCollectionSection table tbody tr td.author-width{
+	font-size:15px;
+}
 .lessonCollectionSection table thead tr th:nth-child(4),
 .lessonCollectionSection table thead tr th:nth-child(5),
 .lessonCollectionSection table tbody tr td:nth-child(4),
