--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1723,6 +1723,9 @@ h3 {
 .lessonCollectionSection table tbody tr td.author-width{
 	font-size:15px;
 }
+.lessonCollectionSection table .cols-7 thead tr th:nth-child(2){
+		width: 453px!important;
+}
 .lessonCollectionSection table thead tr th:nth-child(4),
 .lessonCollectionSection table thead tr th:nth-child(5),
 .lessonCollectionSection table tbody tr td:nth-child(4),
