--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1723,7 +1723,7 @@ h3 {
 .lessonCollectionSection table tbody tr td.author-width{
 	font-size:15px;
 }
-.lessonCollectionSection table .cols-7 thead tr th:nth-child(2){
+.lessonCollectionSection .cols-7 th:nth-child(2){
 		width: 453px!important;
 }
 .lessonCollectionSection table thead tr th:nth-child(4),
