--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1726,6 +1726,9 @@ h3 {
 .lessonCollectionSection .cols-7 th:nth-child(2){
 		width: 453px!important;
 }
+.lessonCollectionSection .cols-7 th:nth-child(3){
+		width: 100px!important;
+}
 .lessonCollectionSection table thead tr th:nth-child(4),
 .lessonCollectionSection table thead tr th:nth-child(5),
 .lessonCollectionSection table tbody tr td:nth-child(4),
