fixing "now playing" for the audio section in the audio section

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1000,9 +1000,18 @@ ul.masonry{
     font-weight: bold;
     color:#9C1F19
 }
-.Audio_link .nowplaying {
-    display: block !important;
+.Audio_link.nowplaying:after {
+    content: "NOW PLAYING";
+    display: block;
+    width: 100%;
+    font-size: 13px;
+    font-style: italic;
+    font-weight: bold;
+    color:#9C1F19
 }
+// .Audio_link .nowplaying {
+//     display: block !important;
+// }
 
 /*======= end carousel========*/
 
