--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1783,7 +1783,7 @@ h3 {
     color: transparent;
 }
 .lessonCollectionSection tr:hover{
-	font-weight: normal;
+	font-weight: bold;
 	background: #e1edf1;
 		.Video{
 				background: url(http://cdn1.kabbalah.com/university/icons/icon_video_dark_grey.png) no-repeat 8px 6px;
