highlighted  read bio

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1619,6 +1619,9 @@ h3 {
       text-decoration: underline;
     }
 }
+.theCourseAuthor a{
+	color: #4DCFF5 !important;
+}
 #authorNameMultimedia a{
   color: $colorWhite;
 }
