--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2396,14 +2396,15 @@ h3 a {
   background: #f2f1f1;
 }
 
-/* line 1854, ../sass/style.scss */
+/* line 1855, ../sass/style.scss */
 .lessonCollectionSection form select option,
 #teachingsSectionHeaderBar select option,
-#views-exposed-form-taxonomy-term-page select option {
+#views-exposed-form-taxonomy-term-page select option,
+#mainContentWrapper select option {
   width: 150px;
 }
 
-/* line 1861, ../sass/style.scss */
+/* line 1862, ../sass/style.scss */
 span.lessonsCourse {
   background: url("../images/dd_arrow.png") no-repeat scroll right 10px white !important;
   border: 1px solid #cccccc;
@@ -2420,17 +2421,17 @@ span.lessonsCourse {
   z-index: 1;
 }
 
-/* line 1877, ../sass/style.scss */
+/* line 1878, ../sass/style.scss */
 .transcription .lessonsCourse, #views-exposed-form-free-lessons-page .lessonsCourse {
   display: block !important;
 }
 
-/* line 1880, ../sass/style.scss */
+/* line 1881, ../sass/style.scss */
 #views-exposed-form-free-lessons-page .views-exposed-widget {
   float: left !important;
 }
 
-/* line 1883, ../sass/style.scss */
+/* line 1884, ../sass/style.scss */
 .transcription span.lessonsCourse {
   background: url("http://cdn1.kabbalah.com/university/icons/dropdown_arrow_blue.png") no-repeat scroll 316px 10px !important;
   border: 0;
@@ -2449,7 +2450,7 @@ span.lessonsCourse {
   text-transform: uppercase;
 }
 
-/* line 1900, ../sass/style.scss */
+/* line 1901, ../sass/style.scss */
 .transcription span.lessonsCourse:before {
   content: "View Live Transcript";
   color: white;
@@ -2457,12 +2458,12 @@ span.lessonsCourse {
   text-transform: capitalize;
 }
 
-/* line 1906, ../sass/style.scss */
+/* line 1907, ../sass/style.scss */
 .transcription .form-type-select {
   margin-bottom: 9px !important;
 }
 
-/* line 1909, ../sass/style.scss */
+/* line 1910, ../sass/style.scss */
 #transcriptWrapper label {
   float: left;
   font-size: 16px;
@@ -2472,24 +2473,24 @@ span.lessonsCourse {
   padding-left: 10px;
 }
 
-/* line 1917, ../sass/style.scss */
+/* line 1918, ../sass/style.scss */
 .transcription select {
   float: none !important;
 }
 
-/* line 1920, ../sass/style.scss */
+/* line 1921, ../sass/style.scss */
 .trans-lang-select.form-select {
   width: 320px;
 }
 
-/* line 1923, ../sass/style.scss */
+/* line 1924, ../sass/style.scss */
 .lessonCollectionSection form select {
   cursor: pointer;
   height: 30px;
   padding-right: 40px;
 }
 
-/* line 1928, ../sass/style.scss */
+/* line 1929, ../sass/style.scss */
 #preReqsTitle {
   color: white;
   font-weight: normal;
@@ -2497,7 +2498,7 @@ span.lessonsCourse {
   line-height: 20px;
 }
 
-/* line 1934, ../sass/style.scss */
+/* line 1935, ../sass/style.scss */
 #preReqs a {
   color: #4dcff5;
   font-weight: normal;
@@ -2506,50 +2507,50 @@ span.lessonsCourse {
   text-transform: uppercase;
 }
 
-/* line 1941, ../sass/style.scss */
+/* line 1942, ../sass/style.scss */
 .lessonTitle {
   float: left;
   width: 450px;
 }
 
-/* line 1945, ../sass/style.scss */
+/* line 1946, ../sass/style.scss */
 .lessonRecordedDate {
   float: left;
   width: 100px;
 }
 
-/* line 1949, ../sass/style.scss */
+/* line 1950, ../sass/style.scss */
 .lessonWatchLink {
   float: left;
   width: 45px;
 }
 
-/* line 1953, ../sass/style.scss */
+/* line 1954, ../sass/style.scss */
 #contentAuthorInfo #eSocial {
   margin-top: 135px !important;
   margin-bottom: 17px !important;
   width: 440px !important;
 }
 
-/* line 1958, ../sass/style.scss */
+/* line 1959, ../sass/style.scss */
 #wrapperVideoSection #eSocial {
   margin: auto;
   width: 940px;
 }
 
-/* line 1962, ../sass/style.scss */
+/* line 1963, ../sass/style.scss */
 .videocontent #eSocial {
   margin: auto;
   width: 640px !important;
 }
 
-/* line 1966, ../sass/style.scss */
+/* line 1967, ../sass/style.scss */
 .sharethis {
   border-top: 1px solid #7c7575;
   padding-top: 10px;
 }
 
-/* line 1970, ../sass/style.scss */
+/* line 1971, ../sass/style.scss */
 #courseDescription #eSocial .sharethis {
   border-top: none !important;
   padding-top: 0 !important;
@@ -2558,7 +2559,7 @@ span.lessonsCourse {
   margin-right: -17px;
 }
 
-/* line 1977, ../sass/style.scss */
+/* line 1978, ../sass/style.scss */
 #language {
   float: left;
   color: #433b3a;
@@ -2567,7 +2568,7 @@ span.lessonsCourse {
   line-height: 24px;
 }
 
-/* line 1984, ../sass/style.scss */
+/* line 1985, ../sass/style.scss */
 #courseDescription #eSocial {
   margin: auto;
   width: 700px;
@@ -2576,119 +2577,119 @@ span.lessonsCourse {
   height: 37px;
 }
 
-/* line 1991, ../sass/style.scss */
+/* line 1992, ../sass/style.scss */
 #optionVideo .sharethis {
   padding-top: 0px;
 }
 
-/* line 1994, ../sass/style.scss */
+/* line 1995, ../sass/style.scss */
 #topicCourseTitle, #topicCourse {
   display: inline !important;
 }
 
-/* line 1997, ../sass/style.scss */
+/* line 1998, ../sass/style.scss */
 #topicCourse {
   text-transform: uppercase;
 }
 
-/* line 2000, ../sass/style.scss */
+/* line 2001, ../sass/style.scss */
 .courseDescriptionWrapper {
   margin: 23px auto;
   width: 700px;
 }
 
-/* line 2004, ../sass/style.scss */
+/* line 2005, ../sass/style.scss */
 .courseDescriptionWrapper p {
   text-align: justify;
 }
 
-/* line 2007, ../sass/style.scss */
+/* line 2008, ../sass/style.scss */
 .courseDescriptionWrapper ul {
   color: #433a3a;
 }
 
-/* line 2010, ../sass/style.scss */
+/* line 2011, ../sass/style.scss */
 .stButton {
   margin-left: 0 !important;
 }
 
-/* line 2013, ../sass/style.scss */
+/* line 2014, ../sass/style.scss */
 .st_facebook_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/facebook_icon_white.png) no-repeat !important;
   width: 26px !important;
 }
 
-/* line 2017, ../sass/style.scss */
+/* line 2018, ../sass/style.scss */
 .st_twitter_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/twitter_icon_white.png) no-repeat !important;
   width: 39px !important;
 }
 
-/* line 2021, ../sass/style.scss */
+/* line 2022, ../sass/style.scss */
 .st_googleplus_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/googleplus_icon_white.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 2025, ../sass/style.scss */
+/* line 2026, ../sass/style.scss */
 .st_email_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/email_icon_white.png) no-repeat !important;
   width: 34px !important;
 }
 
-/* line 2029, ../sass/style.scss */
+/* line 2030, ../sass/style.scss */
 .st_sharethis_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/social_media_icon_white.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 2033, ../sass/style.scss */
+/* line 2034, ../sass/style.scss */
 .st_pinterest_large {
   display: none !important;
 }
 
-/* line 2036, ../sass/style.scss */
+/* line 2037, ../sass/style.scss */
 #courseDescription .st_facebook_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/facebook_icon.png) no-repeat !important;
   width: 26px !important;
 }
 
-/* line 2040, ../sass/style.scss */
+/* line 2041, ../sass/style.scss */
 #courseDescription .st_twitter_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/twitter_icon.png) no-repeat !important;
   width: 39px !important;
 }
 
-/* line 2044, ../sass/style.scss */
+/* line 2045, ../sass/style.scss */
 #courseDescription .st_googleplus_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/googleplus_icon.png) no-repeat !important;
   width: 37px !important;
 }
 
-/* line 2048, ../sass/style.scss */
+/* line 2049, ../sass/style.scss */
 #courseDescription .st_email_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/email_icon.png) no-repeat !important;
   width: 34px !important;
 }
 
-/* line 2052, ../sass/style.scss */
+/* line 2053, ../sass/style.scss */
 #courseDescription .st_sharethis_large .stLarge {
   background: url(http://cdn1.kabbalah.com/kabbalah.com/icons/socialmedia/social_media_icon.png) no-repeat !important;
   width: 37px !important;
 }
 
 /***/
-/* line 2057, ../sass/style.scss */
+/* line 2058, ../sass/style.scss */
 div.jp-audio {
   margin: auto;
 }
 
-/* line 2060, ../sass/style.scss */
+/* line 2061, ../sass/style.scss */
 .videocontent #eSocial {
   margin: auto;
 }
 
-/* line 2063, ../sass/style.scss */
+/* line 2064, ../sass/style.scss */
 #classResources, .keywords {
   background: none repeat scroll 0 0 #ECECEC;
   float: left;
@@ -2697,13 +2698,13 @@ div.jp-audio {
   width: 560px;
 }
 
-/* line 2070, ../sass/style.scss */
+/* line 2071, ../sass/style.scss */
 .keywords:before {
   content: "Keywords : ";
   font-weight: bold;
 }
 
-/* line 2074, ../sass/style.scss */
+/* line 2075, ../sass/style.scss */
 .keywords {
   color: #9c1f19;
   margin-bottom: 0;
@@ -2712,13 +2713,13 @@ div.jp-audio {
   font-size: 13px;
 }
 
-/* line 2082, ../sass/style.scss */
+/* line 2083, ../sass/style.scss */
 #classHighlights ul {
   padding-left: 15px;
   margin-top: 10px;
 }
 
-/* line 2086, ../sass/style.scss */
+/* line 2087, ../sass/style.scss */
 #classHighlights li {
   list-style: disc outside none;
   color: #433a3a;
@@ -2728,7 +2729,7 @@ div.jp-audio {
   margin-bottom: 3px;
 }
 
-/* line 2094, ../sass/style.scss */
+/* line 2095, ../sass/style.scss */
 .resourceTitle > a {
   color: #127795;
   font-weight: normal;
@@ -2739,7 +2740,7 @@ div.jp-audio {
   vertical-align: super;
 }
 
-/* line 2103, ../sass/style.scss */
+/* line 2104, ../sass/style.scss */
 .resourceFile {
   background-position: 0 0;
   margin-right: 14px;
@@ -2748,7 +2749,7 @@ div.jp-audio {
   width: 24px;
 }
 
-/* line 2110, ../sass/style.scss */
+/* line 2111, ../sass/style.scss */
 #classesDescription > p {
   color: #433a3a;
   font-size: 16px;
@@ -2759,12 +2760,12 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2119, ../sass/style.scss */
+/* line 2120, ../sass/style.scss */
 .videocontent .sharethis {
   border-top: none;
 }
 
-/* line 2122, ../sass/style.scss */
+/* line 2123, ../sass/style.scss */
 .lessonCollectionSection .Audio {
   background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0;
   height: 13px;
@@ -2772,7 +2773,7 @@ div.jp-audio {
 }
 
 /**grid display***/
-/* line 2129, ../sass/style.scss */
+/* line 2130, ../sass/style.scss */
 #mainContentWrapper, #courseByParentWrapper {
   clear: both;
   margin: auto;
@@ -2781,7 +2782,7 @@ div.jp-audio {
   padding: 0 10px 40px;
 }
 
-/* line 2136, ../sass/style.scss */
+/* line 2137, ../sass/style.scss */
 .topicwrapper {
   float: left;
   cursor: pointer;
@@ -2790,12 +2791,12 @@ div.jp-audio {
   height: 170px;
 }
 
-/* line 2143, ../sass/style.scss */
+/* line 2144, ../sass/style.scss */
 .topicItemTitle {
   margin: 0 10px;
 }
 
-/* line 2146, ../sass/style.scss */
+/* line 2147, ../sass/style.scss */
 .topicItemTitle a {
   color: #433a3a !important;
   font-size: 15px;
@@ -2807,14 +2808,14 @@ div.jp-audio {
   -webkit-font-smoothing: antialiased;
 }
 
-/* line 2156, ../sass/style.scss */
+/* line 2157, ../sass/style.scss */
 .topicTermnDate {
   font-size: 12px;
   margin: 0 10px;
   padding-bottom: 10px;
 }
 
-/* line 2161, ../sass/style.scss */
+/* line 2162, ../sass/style.scss */
 .topicItemText {
   color: #433a3a !important;
   display: block;
@@ -2824,13 +2825,13 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2169, ../sass/style.scss */
+/* line 2170, ../sass/style.scss */
 .topicItemText span a {
   text-transform: capitalize;
   color: #127795;
 }
 
-/* line 2174, ../sass/style.scss */
+/* line 2175, ../sass/style.scss */
 #mainContentWrapper h1#page-title,
 #courseByParentWrapper h1#page-title {
   margin-top: 47px;
@@ -2838,7 +2839,7 @@ div.jp-audio {
   float: none;
 }
 
-/* line 2179, ../sass/style.scss */
+/* line 2180, ../sass/style.scss */
 .topicItemImage a {
   height: auto !important;
   text-decoration: none !important;
@@ -2846,7 +2847,7 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2185, ../sass/style.scss */
+/* line 2186, ../sass/style.scss */
 .topicItemImage img {
   float: left;
   height: 170px;
@@ -2854,7 +2855,7 @@ div.jp-audio {
   z-index: -10;
 }
 
-/* line 2191, ../sass/style.scss */
+/* line 2192, ../sass/style.scss */
 .topicTextWrapper {
   background: url("../images/sliding_white_bg_3.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0);
   float: left;
@@ -2863,12 +2864,12 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2198, ../sass/style.scss */
+/* line 2199, ../sass/style.scss */
 .sticky-header {
   display: none !important;
 }
 
-/* line 2201, ../sass/style.scss */
+/* line 2202, ../sass/style.scss */
 #list img, #grid img {
   float: left;
   height: 16px;
@@ -2877,18 +2878,18 @@ div.jp-audio {
 }
 
 /**home page**/
-/* line 2210, ../sass/style.scss */
+/* line 2211, ../sass/style.scss */
 #carousal1Wrapper, #carousal2Wrapper, #carousal3Wrapper, #carousal4Wrapper {
   float: left;
   width: 100%;
 }
 
-/* line 2220, ../sass/style.scss */
+/* line 2221, ../sass/style.scss */
 #carousal4Wrapper {
   margin-bottom: 40px;
 }
 
-/* line 2227, ../sass/style.scss */
+/* line 2228, ../sass/style.scss */
 #block-ukabbalah-fp-carousals-carousal1 > h2,
 #block-ukabbalah-fp-carousals-carousal2 > h2,
 #block-ukabbalah-fp-carousals-carousal3 > h2,
@@ -2898,13 +2899,13 @@ div.jp-audio {
   color: #999;
 }
 
-/* line 2232, ../sass/style.scss */
+/* line 2233, ../sass/style.scss */
 .carrouselFix {
   margin-left: 10px;
   margin-bottom: 0;
 }
 
-/* line 2236, ../sass/style.scss */
+/* line 2237, ../sass/style.scss */
 .vidImg, .Videos, .theDescCont .Video, .Premium, .audioImg, .Audios, .theDescCont .Audio, .bothAdVdImg {
   height: 13px;
   width: 16px;
@@ -2914,71 +2915,71 @@ div.jp-audio {
   background-position: 0 -1421px;
 }
 
-/* line 2250, ../sass/style.scss */
+/* line 2251, ../sass/style.scss */
 .Premium {
   background-position: 0 -1442px;
   width: 11px;
   float: right;
 }
 
-/* line 2256, ../sass/style.scss */
+/* line 2257, ../sass/style.scss */
 .audioImg, .Audios, .theDescCont .Audio {
   background-position: 0 -1348px;
 }
 
-/* line 2266, ../sass/style.scss */
+/* line 2267, ../sass/style.scss */
 .bothAdVdImg {
   background-position: 0 -309px;
   width: 35px;
 }
 
-/* line 2271, ../sass/style.scss */
+/* line 2272, ../sass/style.scss */
 .theTitle, .titleWrapper {
   float: left;
   margin-left: 10px;
   margin-top: 10px;
 }
 
-/* line 2276, ../sass/style.scss */
+/* line 2277, ../sass/style.scss */
 .teachersPath, .readMore {
   color: #127795;
   margin-left: 5px;
 }
 
-/* line 2280, ../sass/style.scss */
+/* line 2281, ../sass/style.scss */
 .rightArrowStyleHome {
   position: relative;
 }
 
 /***/
-/* line 2285, ../sass/style.scss */
+/* line 2286, ../sass/style.scss */
 #teachingsSectionHeaderBar .lessonsCourse {
   display: block;
 }
 
-/* line 2288, ../sass/style.scss */
+/* line 2289, ../sass/style.scss */
 #authorDDWrapper, #topicDDWrapper {
   float: left;
 }
 
-/* line 2291, ../sass/style.scss */
+/* line 2292, ../sass/style.scss */
 #teachings_teachersDD, #teachings_topicDD {
   cursor: pointer;
   height: 29px;
 }
 
-/* line 2295, ../sass/style.scss */
+/* line 2296, ../sass/style.scss */
 .preVideoImg {
   width: 940px;
   margin: 20px auto auto;
 }
 
-/* line 2299, ../sass/style.scss */
+/* line 2300, ../sass/style.scss */
 .preVideoImg img {
   float: left;
 }
 
-/* line 2302, ../sass/style.scss */
+/* line 2303, ../sass/style.scss */
 .preVideoImg .videotitles {
   float: right;
   width: 290px;
@@ -2987,7 +2988,7 @@ div.jp-audio {
   margin-top: 0;
 }
 
-/* line 2314, ../sass/style.scss */
+/* line 2315, ../sass/style.scss */
 .preVideoImg #titleMultimedia,
 .preVideoImg #courseNameMultimedia,
 .preVideoImg #pipe,
@@ -2999,64 +3000,64 @@ div.jp-audio {
   color: white;
 }
 
-/* line 2317, ../sass/style.scss */
+/* line 2318, ../sass/style.scss */
 .preVideoImg #wrapperInfoMultimedia, .preVideoImg #wrapperAuthorDate {
   width: 290px;
 }
 
-/* line 2320, ../sass/style.scss */
+/* line 2321, ../sass/style.scss */
 .preVideoImg #authorNameMultimedia, .preVideoImg #dateMultimedia {
   text-align: left;
 }
 
-/* line 2323, ../sass/style.scss */
+/* line 2324, ../sass/style.scss */
 .preVideoImg .pipe {
   display: none;
 }
 
-/* line 2326, ../sass/style.scss */
+/* line 2327, ../sass/style.scss */
 .preVideoImg #wrapperPrice {
   width: 275px;
   margin-left: 30px;
 }
 
-/* line 2330, ../sass/style.scss */
+/* line 2331, ../sass/style.scss */
 .preVideoImg .sharethis {
   float: right;
   width: 290px;
   margin-top: 16px;
 }
 
-/* line 2335, ../sass/style.scss */
+/* line 2336, ../sass/style.scss */
 .transcript-content {
   width: 605px;
 }
 
-/* line 2338, ../sass/style.scss */
+/* line 2339, ../sass/style.scss */
 .audioSection .preVideoImg img {
   width: 620px;
   height: 349px;
 }
 
-/* line 2342, ../sass/style.scss */
+/* line 2343, ../sass/style.scss */
 .bookmark {
   float: right;
   width: 117px;
   color: #433a3a;
   font-size: 15px;
 }
-/* line 2347, ../sass/style.scss */
+/* line 2348, ../sass/style.scss */
 .bookmark a {
   color: #433a3a;
 }
 
-/* line 2351, ../sass/style.scss */
+/* line 2352, ../sass/style.scss */
 .flag-message {
   left: -169px !important;
 }
 
 /**start scrollling filter**/
-/* line 2356, ../sass/style.scss */
+/* line 2357, ../sass/style.scss */
 .scrollingTitle {
   background: #fff;
   position: fixed !important;
@@ -3070,7 +3071,7 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2369, ../sass/style.scss */
+/* line 2370, ../sass/style.scss */
 .scrollingFilter, .scrollingTermDesc, .scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
@@ -3083,13 +3084,13 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2380, ../sass/style.scss */
+/* line 2381, ../sass/style.scss */
 .scrollingFilter {
   padding-bottom: 10px !important;
   padding-left: 0 !important;
 }
 
-/* line 2384, ../sass/style.scss */
+/* line 2385, ../sass/style.scss */
 .teachingsBarInnerWrapper {
   max-width: 1580px;
   min-width: 940px;
