--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1851,7 +1851,8 @@ h3 {
 // }
 .lessonCollectionSection form select option,
 #teachingsSectionHeaderBar select option,
-#views-exposed-form-taxonomy-term-page select option{
+#views-exposed-form-taxonomy-term-page select option,
+#mainContentWrapper select option{
 	width:150px;
 }
 
