--- a/sites/all/themes/ukabbalah/css/tooltipster.css
+++ b/sites/all/themes/ukabbalah/css/tooltipster.css
@@ -19,7 +19,7 @@ html {
 	font-family: Arial, sans-serif;
 	font-size: 14px;
 	line-height: 16px;
-	padding: 8px 10px;
+	padding: 35px 30px 40px;
 	overflow: hidden;
 }
 
@@ -285,7 +285,7 @@ html {
 	width: 220px;
 	height: 220px;
 	float: left;
-	margin:-8px 20px 0 -10px;
+	margin:-8px 30px 15px -10px;
 }
 .tooltipster-arrow span{
 	display: none;
