added class to remove the last divider.

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1623,7 +1623,7 @@ h3 {
 	color: #4DCFF5 !important;
 	text-transform: uppercase;
 }
-.divider:last{
+.divider:last-child{
 	display:none;
 }
 #authorNameMultimedia a{
