import tooltipster file

--- a/sites/all/themes/ukabbalah/css/---tooltipster.css
+++ b/sites/all/themes/ukabbalah/css/---tooltipster.css
@@ -1,4 +1,4 @@
-html {
+/*/*html {
 	 -webkit-font-smoothing: antialiased;
 }
 
@@ -313,4 +313,4 @@ a.close-tip{
     margin-right: 0;
     margin-top: 0;
     width: 10px;
-}
+}*/*/
