--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2392,3 +2392,5 @@ div.jp-audio{
     margin: auto;
 }
 /**end scrollling filter**/
+
+@import "tooltipster"; // We import the fonts on separate file. The file is called "_tooltipster.scss". 
