--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -3474,16 +3474,17 @@ a.close-tip {
 
 /* line 302, ../sass/_tooltipster.scss */
 .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
-  left: 162px !important;
+  left: 33% !important;
+  top: 33% !important;
 }
 
 @media (max-width: 1000px) {
-  /* line 306, ../sass/_tooltipster.scss */
+  /* line 307, ../sass/_tooltipster.scss */
   .tooltipster-base.tooltipster-default.tooltipster-fade.tooltipster-fade-show {
     left: 20px !important;
   }
 }
-/* line 310, ../sass/_tooltipster.scss */
+/* line 311, ../sass/_tooltipster.scss */
 .close-tip img {
   height: 10px;
   margin-left: 0;
