added space between class description and keywords

--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -2714,18 +2714,19 @@ div.jp-audio {
 .keywords {
   color: #9c1f19;
   margin-bottom: 0;
+  margin-top: 20px;
   padding-bottom: 10px;
   padding-top: 10px;
   font-size: 13px;
 }
 
-/* line 2087, ../sass/style.scss */
+/* line 2088, ../sass/style.scss */
 #classHighlights ul {
   padding-left: 15px;
   margin-top: 10px;
 }
 
-/* line 2091, ../sass/style.scss */
+/* line 2092, ../sass/style.scss */
 #classHighlights li {
   list-style: disc outside none;
   color: #433a3a;
@@ -2735,7 +2736,7 @@ div.jp-audio {
   margin-bottom: 3px;
 }
 
-/* line 2099, ../sass/style.scss */
+/* line 2100, ../sass/style.scss */
 .resourceTitle > a {
   color: #127795;
   font-weight: normal;
@@ -2746,7 +2747,7 @@ div.jp-audio {
   vertical-align: super;
 }
 
-/* line 2108, ../sass/style.scss */
+/* line 2109, ../sass/style.scss */
 .resourceFile {
   background-position: 0 0;
   margin-right: 14px;
@@ -2755,7 +2756,7 @@ div.jp-audio {
   width: 24px;
 }
 
-/* line 2115, ../sass/style.scss */
+/* line 2116, ../sass/style.scss */
 #classesDescription > p {
   color: #433a3a;
   font-size: 16px;
@@ -2766,12 +2767,12 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2124, ../sass/style.scss */
+/* line 2125, ../sass/style.scss */
 .videocontent .sharethis {
   border-top: none;
 }
 
-/* line 2127, ../sass/style.scss */
+/* line 2128, ../sass/style.scss */
 .lessonCollectionSection .Audio {
   background: url("http://cdn1.kabbalah.com/kabbalah.com/icons/audio_icon.png") no-repeat 8px 0;
   height: 13px;
@@ -2779,7 +2780,7 @@ div.jp-audio {
 }
 
 /**grid display***/
-/* line 2134, ../sass/style.scss */
+/* line 2135, ../sass/style.scss */
 #mainContentWrapper, #courseByParentWrapper {
   clear: both;
   margin: auto;
@@ -2788,7 +2789,7 @@ div.jp-audio {
   padding: 0 10px 40px;
 }
 
-/* line 2141, ../sass/style.scss */
+/* line 2142, ../sass/style.scss */
 .topicwrapper {
   float: left;
   cursor: pointer;
@@ -2797,12 +2798,12 @@ div.jp-audio {
   height: 170px;
 }
 
-/* line 2148, ../sass/style.scss */
+/* line 2149, ../sass/style.scss */
 .topicItemTitle {
   margin: 0 10px;
 }
 
-/* line 2151, ../sass/style.scss */
+/* line 2152, ../sass/style.scss */
 .topicItemTitle a {
   color: #433a3a !important;
   font-size: 15px;
@@ -2814,14 +2815,14 @@ div.jp-audio {
   -webkit-font-smoothing: antialiased;
 }
 
-/* line 2161, ../sass/style.scss */
+/* line 2162, ../sass/style.scss */
 .topicTermnDate {
   font-size: 12px;
   margin: 0 10px;
   padding-bottom: 10px;
 }
 
-/* line 2166, ../sass/style.scss */
+/* line 2167, ../sass/style.scss */
 .topicItemText {
   color: #433a3a !important;
   display: block;
@@ -2831,13 +2832,13 @@ div.jp-audio {
   text-align: left;
 }
 
-/* line 2174, ../sass/style.scss */
+/* line 2175, ../sass/style.scss */
 .topicItemText span a {
   text-transform: capitalize;
   color: #127795;
 }
 
-/* line 2179, ../sass/style.scss */
+/* line 2180, ../sass/style.scss */
 #mainContentWrapper h1#page-title,
 #courseByParentWrapper h1#page-title {
   margin-top: 47px;
@@ -2845,7 +2846,7 @@ div.jp-audio {
   float: none;
 }
 
-/* line 2184, ../sass/style.scss */
+/* line 2185, ../sass/style.scss */
 .topicItemImage a {
   height: auto !important;
   text-decoration: none !important;
@@ -2853,7 +2854,7 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2190, ../sass/style.scss */
+/* line 2191, ../sass/style.scss */
 .topicItemImage img {
   float: left;
   height: 170px;
@@ -2861,7 +2862,7 @@ div.jp-audio {
   z-index: -10;
 }
 
-/* line 2196, ../sass/style.scss */
+/* line 2197, ../sass/style.scss */
 .topicTextWrapper {
   background: url("../images/sliding_white_bg_3.png") repeat-x scroll 0 0 rgba(0, 0, 0, 0);
   float: left;
@@ -2870,12 +2871,12 @@ div.jp-audio {
   width: 300px;
 }
 
-/* line 2203, ../sass/style.scss */
+/* line 2204, ../sass/style.scss */
 .sticky-header {
   display: none !important;
 }
 
-/* line 2206, ../sass/style.scss */
+/* line 2207, ../sass/style.scss */
 #list img, #grid img {
   float: left;
   height: 16px;
@@ -2884,18 +2885,18 @@ div.jp-audio {
 }
 
 /**home page**/
-/* line 2215, ../sass/style.scss */
+/* line 2216, ../sass/style.scss */
 #carousal1Wrapper, #carousal2Wrapper, #carousal3Wrapper, #carousal4Wrapper {
   float: left;
   width: 100%;
 }
 
-/* line 2225, ../sass/style.scss */
+/* line 2226, ../sass/style.scss */
 #carousal4Wrapper {
   margin-bottom: 40px;
 }
 
-/* line 2232, ../sass/style.scss */
+/* line 2233, ../sass/style.scss */
 #block-ukabbalah-fp-carousals-carousal1 > h2,
 #block-ukabbalah-fp-carousals-carousal2 > h2,
 #block-ukabbalah-fp-carousals-carousal3 > h2,
@@ -2905,13 +2906,13 @@ div.jp-audio {
   color: #999;
 }
 
-/* line 2237, ../sass/style.scss */
+/* line 2238, ../sass/style.scss */
 .carrouselFix {
   margin-left: 10px;
   margin-bottom: 0;
 }
 
-/* line 2241, ../sass/style.scss */
+/* line 2242, ../sass/style.scss */
 .vidImg, .Videos, .theDescCont .Video, .Premium, .audioImg, .Audios, .theDescCont .Audio, .bothAdVdImg {
   height: 13px;
   width: 16px;
@@ -2921,71 +2922,71 @@ div.jp-audio {
   background-position: 0 -1421px;
 }
 
-/* line 2255, ../sass/style.scss */
+/* line 2256, ../sass/style.scss */
 .Premium {
   background-position: 0 -1442px;
   width: 11px;
   float: right;
 }
 
-/* line 2261, ../sass/style.scss */
+/* line 2262, ../sass/style.scss */
 .audioImg, .Audios, .theDescCont .Audio {
   background-position: 0 -1348px;
 }
 
-/* line 2271, ../sass/style.scss */
+/* line 2272, ../sass/style.scss */
 .bothAdVdImg {
   background-position: 0 -309px;
   width: 35px;
 }
 
-/* line 2276, ../sass/style.scss */
+/* line 2277, ../sass/style.scss */
 .theTitle, .titleWrapper {
   float: left;
   margin-left: 10px;
   margin-top: 10px;
 }
 
-/* line 2281, ../sass/style.scss */
+/* line 2282, ../sass/style.scss */
 .teachersPath, .readMore {
   color: #127795;
   margin-left: 5px;
 }
 
-/* line 2285, ../sass/style.scss */
+/* line 2286, ../sass/style.scss */
 .rightArrowStyleHome {
   position: relative;
 }
 
 /***/
-/* line 2290, ../sass/style.scss */
+/* line 2291, ../sass/style.scss */
 #teachingsSectionHeaderBar .lessonsCourse {
   display: block;
 }
 
-/* line 2293, ../sass/style.scss */
+/* line 2294, ../sass/style.scss */
 #authorDDWrapper, #topicDDWrapper {
   float: left;
 }
 
-/* line 2296, ../sass/style.scss */
+/* line 2297, ../sass/style.scss */
 #teachings_teachersDD, #teachings_topicDD {
   cursor: pointer;
   height: 29px;
 }
 
-/* line 2300, ../sass/style.scss */
+/* line 2301, ../sass/style.scss */
 .preVideoImg {
   width: 940px;
   margin: 20px auto auto;
 }
 
-/* line 2304, ../sass/style.scss */
+/* line 2305, ../sass/style.scss */
 .preVideoImg img {
   float: left;
 }
 
-/* line 2307, ../sass/style.scss */
+/* line 2308, ../sass/style.scss */
 .preVideoImg .videotitles {
   float: right;
   width: 290px;
@@ -2994,7 +2995,7 @@ div.jp-audio {
   margin-top: 0;
 }
 
-/* line 2319, ../sass/style.scss */
+/* line 2320, ../sass/style.scss */
 .preVideoImg #titleMultimedia,
 .preVideoImg #courseNameMultimedia,
 .preVideoImg #pipe,
@@ -3006,64 +3007,64 @@ div.jp-audio {
   color: white;
 }
 
-/* line 2322, ../sass/style.scss */
+/* line 2323, ../sass/style.scss */
 .preVideoImg #wrapperInfoMultimedia, .preVideoImg #wrapperAuthorDate {
   width: 290px;
 }
 
-/* line 2325, ../sass/style.scss */
+/* line 2326, ../sass/style.scss */
 .preVideoImg #authorNameMultimedia, .preVideoImg #dateMultimedia {
   text-align: left;
 }
 
-/* line 2328, ../sass/style.scss */
+/* line 2329, ../sass/style.scss */
 .preVideoImg .pipe {
   display: none;
 }
 
-/* line 2331, ../sass/style.scss */
+/* line 2332, ../sass/style.scss */
 .preVideoImg #wrapperPrice {
   width: 275px;
   margin-left: 30px;
 }
 
-/* line 2335, ../sass/style.scss */
+/* line 2336, ../sass/style.scss */
 .preVideoImg .sharethis {
   float: right;
   width: 290px;
   margin-top: 16px;
 }
 
-/* line 2340, ../sass/style.scss */
+/* line 2341, ../sass/style.scss */
 .transcript-content {
   width: 605px;
 }
 
-/* line 2343, ../sass/style.scss */
+/* line 2344, ../sass/style.scss */
 .audioSection .preVideoImg img {
   width: 620px;
   height: 349px;
 }
 
-/* line 2347, ../sass/style.scss */
+/* line 2348, ../sass/style.scss */
 .bookmark {
   float: right;
   width: 117px;
   color: #433a3a;
   font-size: 15px;
 }
-/* line 2352, ../sass/style.scss */
+/* line 2353, ../sass/style.scss */
 .bookmark a {
   color: #433a3a;
 }
 
-/* line 2356, ../sass/style.scss */
+/* line 2357, ../sass/style.scss */
 .flag-message {
   left: -169px !important;
 }
 
 /**start scrollling filter**/
-/* line 2361, ../sass/style.scss */
+/* line 2362, ../sass/style.scss */
 .scrollingTitle {
   background: #fff;
   position: fixed !important;
@@ -3077,7 +3078,7 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2374, ../sass/style.scss */
+/* line 2375, ../sass/style.scss */
 .scrollingFilter, .scrollingTermDesc, .scrollingView-filters {
   background: url("../images/shadow_local_bar-1.png") repeat-x scroll center bottom rgba(0, 0, 0, 0);
   position: fixed !important;
@@ -3090,13 +3091,13 @@ div.jp-audio {
   z-index: 1400 !important;
 }
 
-/* line 2385, ../sass/style.scss */
+/* line 2386, ../sass/style.scss */
 .scrollingFilter {
   padding-bottom: 10px !important;
   padding-left: 0 !important;
 }
 
-/* line 2389, ../sass/style.scss */
+/* line 2390, ../sass/style.scss */
 .teachingsBarInnerWrapper {
   max-width: 1580px;
   min-width: 940px;
