--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2080,6 +2080,7 @@ div.jp-audio{
   @extend #classResources;
   color: $colorRed;
    margin-bottom: 0;
+   margin-top: 20px;
     padding-bottom: 10px;
     padding-top: 10px;
     font-size: 13px;  
