--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -2118,7 +2118,7 @@ div.jp-audio{
     font-size: 16px;
     font-weight: normal;
     line-height: 25px;
-    margin-bottom: -8px;
+    // margin-bottom: -8px;
     margin-top: -10px;
     text-align: left;
 }
