--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1468,7 +1468,7 @@ h3 {
     line-height: 25px;
     color:$colorBrown; 
     text-align: left;
-    margin-bottom: 20px;
+    // margin-bottom: 20px;
 }
 .titleDescription{
     font-weight:normal; 
