--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -737,6 +737,9 @@ ul.masonry{
     height:20px;
     margin-top: 24px;
 }
+#teachingsControlSection .scrollingTitle{
+	padding-bottom:36px!important;
+}
 #teachingsSectionTitle {
     color: #433A3A;
     float: left;
