--- a/sites/all/themes/ukabbalah/css/style.css
+++ b/sites/all/themes/ukabbalah/css/style.css
@@ -1031,10 +1031,10 @@ ul.masonry {
   text-align: left;
 }
 
-@media (max-width: 980px) {
+@media only screen and (max-width: 980px) {
   /* line 824, ../sass/style.scss */
   .descriptionEvents {
-    font-size: 17px;
+    font-size: 15px;
   }
 }
 /* line 828, ../sass/style.scss */
