--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -820,7 +820,7 @@ ul.masonry{
     padding-left: 18px;
     text-align: left;
 }
-@media only screen and (max-width: 960px) {
+@media only screen and (min-width: 980px) {
 	.descriptionEvents{
 		font-size: 15px;
 	}
